--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <div class="project-overlay"></div>
             <div class="project-content">
                 <span class="project-tag">Dashboard • POS System</span>
-                <h3>Cashier App</h3>
+                <h3>NavPOS</h3>
                 <p>Point of sales dashboard system for cashier and inventory management.</p>
             </div>
         </a>
@@ -284,3 +284,4 @@
 
 </body>
 </html>
+
